--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,12 @@
 <meta charset="UTF-8" />
 <title>Search results map</title>
 <link href="main.css" rel="stylesheet" />
+<link rel="shortcut icon" type="image/png" href="favicon.png" />
 
 </head>
 <body>
+    <div id="srm-app"></div>
     <script src="main.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&callback=srm"></script>
 </body>
 </html>
