--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="srm-app"></div>
+    <!-- <script src="vendor.js"></script> -->
     <script src="main.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places&callback=srm"></script>
 </body>
